use default task instead of precommit task